# stalzone-market-analytics

./: .gitignore  AUCTION_WATCHER.md  PORTABLE_README.txt  auction_watcher.py  auction_watcher_gui.py  auction_watchlist.example.json  package-lock.json  package.json  run_auction_watcher_gui.bat  run_auction_watcher_tauri.bat  tauri.html  vite.config.ts
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
