[package]
name = "stalzone-auction-watcher"
version = "0.1.0"
description = "STALZONE auction watcher"
authors = ["ArtefactOptimizer"]
edition = "2021"

[lib]
name = "stalzone_auction_watcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["sync"] }
dotenvy = "0.15"
urlencoding = "2"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }

[profile.dev]
debug = 0
incremental = false

[profile.dev.package."*"]
debug = 0
